--- a/DS_Questions/Questions/Permutation_Combination/Coin_Change_2.adoc
+++ b/DS_Questions/Questions/Permutation_Combination/Coin_Change_2.adoc
@@ -1,4 +1,7 @@
-## [Coin Change](https://leetcode.com/problems/coin-change-2/)
+:toc:
+:toclevels: 4
+
+=== link:https://leetcode.com/problems/coin-change-2[Coin Change]
 - You are given coins of different denominations and a total amount of money. Find number of combinations that make up that amount. There is infinite number of each kind of coin.
 - Examples
 ```c
@@ -18,10 +21,14 @@ Output: 0
 Explanation: the amount of 3 cannot be made up just with coins of 2.
 ```
 
-### You need to watch [Self-Youtube-Video](https://youtu.be/7pRO5Zuiijo) [Video-2](https://youtu.be/C8bmCYohJkw) for explanation, because its pretty complex.
+=== Watch Video for explanation, because its pretty complex.
+* link:https://youtu.be/7pRO5Zuiijo[Self-Youtube-Video]
+* link:https://youtu.be/C8bmCYohJkw[Video2]
 
-### Code
-```c++
+=== Code
+
+==== CPP
+```cpp
 //n=value to be made
 //c=denominations of coins
 long getWays(int n, vector<long> c){
