Update and rename Quick_Sort.md to Quick_Sort.adoc

--- a/DS_Questions/Sorting/Quick_Sort.adoc
+++ b/DS_Questions/Sorting/Quick_Sort.adoc
@@ -1,23 +1,21 @@
-**Quick Sort / Divide and conquer algo**
-- [Approach](#a)
-- [Logic](#l)
-- [Complexity](#c)
-- [Code](#cpp)
+:toc:
+:toclevels: 5
+
+=== Ref Video
+link:https://www.youtube.com/watch?v=QN9hnmAgmOc[if confused]
 
 
-[if confused](https://www.youtube.com/watch?v=QN9hnmAgmOc)
-
-<a name=a></a>
-### Approach(Very Simple)
+== Quick Sort / Divide and conquer algo
+=== Approach(Very Simple)
 ```c
   6   7   8   9   1   5
 start                end
 ```
-- *1.* Any random element is selected as Pivot. Eg: pivot=`a[0]=6`
-- *2.* Find the final place(index=2) of pivot in the array. Final place will be the position which it will have in sorted array. `1 5 6 7 8 9`
+* 1. Any random element is selected as Pivot. Eg: pivot=`a[0]=6`
+* 2. Find the final place(index=2) of pivot in the array. Final place will be the position which it will have in sorted array. `1 5 6 7 8 9`
 
-<a name=l></a>
-### Logic
+
+==== Logic
 ```c
   Iterate Until(start < end)
     if(element_at_start <= pivot){ 
@@ -41,17 +39,16 @@ Now end crossed start, swap element_pointed_by_pivot with end_element.
 Recursively do this for left and right sub-arrays.
 ```
 
-<a name=c></a>
-### Complexity
-- **Time:**
-  - Worst: O(n<sup>2</sup>).
-    - When input array is sorted or reverse sorted. this makes picked pivot as always extreme(smallest or largest) element.
-  - Avg: O(nlogn)
-  - Best: O(n)
-- **Space:** O(1)
+==== Complexity
+* Time:
+** Worst: n^2^.
+*** When input array is sorted or reverse sorted. this makes picked pivot as always extreme(smallest or largest) element.
+*** Avg: O(nlogn)
+*** Best: O(n)
+* Space: O(1)
 
-<a name=cpp></a>
-### Code
+==== Code
+===== CPP
 ```cpp
 int partition(vector<int>& v, int start, int end) {  
     int pivot = v[end];   //or int pivot = v[left + (right - left) / 2];
