--- a/DS_Questions/Data_Structures/Monotonic_Stack_Queue/README.adoc
+++ b/DS_Questions/Data_Structures/Monotonic_Stack_Queue/README.adoc
@@ -3,9 +3,9 @@
 
 === Monotonic Stack vs Queue
 |===
-| | Monotonic Stack | Monotonic Queue |
+| | Monotonic Stack | Monotonic Queue
 
-| Applications |To Find next greater element / next smaller element / Previous greater element / and previous smaller element | Find min/max in the current sliding window |
+| Applications |To Find next greater element / next smaller element / Previous greater element / and previous smaller element | Find min/max in the current sliding window
 |===
 
 === Monotonic Queue
@@ -13,10 +13,10 @@ Used to find Min/Max in sliding Window
 
 ==== Types of Queues
 |===
-| | Increasing Monotonic Queue | Decreasing Monotonic Queue |
+| | Increasing Monotonic Queue | Decreasing Monotonic Queue
 
-|Order of elements in queue| Increasing | Decreasing |
-|Removing from Queue| Any element that is smaller than the current minimum is removed | Any element that is greater than the current max is removed | 
+|Order of elements in queue| Increasing | Decreasing
+|Removing from Queue| Any element that is smaller than the current minimum is removed | Any element that is greater than the current max is removed
 |===
 
 ===== Increasing Monotonic Queue
